--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,20 @@
 <% provide(:title, "Home") %>
+
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
+
 <div class="center jumbotron">
+
   <h1>Welcome to the Sample App -
 <%
 # Provide это только во вьюхах
@@ -29,3 +44,4 @@ user1 == user2
 <%= link_to 'about', about_path, class: "btn btn-lg btn-primary" %> |
 <%= link_to 'help', help_path, class: "btn btn-lg btn-primary" %> |
 <%= link_to 'contact', contact_path, class: "btn btn-lg btn-primary" %>
+<% end %>
