--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,6 +12,16 @@
       <section class="micropost_form">
         <%= render 'shared/micropost_form' %>
       </section>
+      <section >
+        <div class="field">
+        <%= form_for(@project) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+          <div class="field">
+          <%= f.text_area :project_name, placeholder: "+ add Project" %>
+          </div>
+        <%= f.submit "+ add TODO List", class: "btn btn-primary" %>
+        <% end %>
+      </section>  
     </aside>
     <div class="col-md-8">
       <h3>Micropost feed(lenta)</h3>
