--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,6 +1,6 @@
 <li id="project-<%= project.id %>">
   <span class="user"><%= link_to project.user.name, project.user %></span>
-  <span class="content"><%= project.content %></span>
+  <span class="project_name"><%= project.project_name %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(project.created_at) %> ago.
   </span>
