--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,8 +30,8 @@
   <div class="col-md-8">
     <% if @user.projects.any? %>
       <h3>Projects (<%= @user.projects.count %>)</h3>
-      <ol class="microposts">
-        <%= render @projects %>
+      <ol class="projects">
+        <%= render @projects %><!---->
       </ol>
       
     <% end %>
