--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,7 +1,7 @@
 <li id="project-<%= project.id %>">
-  <span class="user"><%= link_to project.user.name, project.user %></span>
   <span class="project_name"><%= project.project_name %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(project.created_at) %> ago.
-  </span>
+    <% if current_user?(project.user) %>
+      <%= link_to "delete", project, method: :delete,
+                                       data: { confirm: "You sure?" } %>
+    <% end %>
 </li>
