--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,21 +13,26 @@
         <%= render 'shared/micropost_form' %>
       </section>
       <section >
-        <div class="field">
+      </section>  
+    </aside>
+    <div>
+      <div class="field"> 
+        <h3> Simple todo list </h3>
+        <h3> From ruby garage </h3>
+        <h3>Projects (<%= @user.projects.count %>)</h3>
+        <button type="button" id="formButton">+ add_TODO_List</button>
+        <%= render 'shared/project_form' %>
+        <div class="feld123">
         <%= form_for(@project) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
           <div class="field">
           <%= f.text_area :project_name, placeholder: "+ add Project" %>
           </div>
-        <%= f.submit "+ add TODO List", class: "btn btn-primary" %>
+          <%= f.submit "+ add TODO List", class: "btn btn-primary" %>
         <% end %>
-      </section>  
-    </aside>
-    <div>
-      <h3>Projects (<%= @user.projects.count %>)</h3>
-      <div class="field"> 
-        <h1> Simple todo list </h1>
-        <h3> From ruby garage </h3> 
+        <%= form_tag method: :post do %>
+        <%= submit_tag 'Call Action' %>
+        <% end %>
         <%= render 'shared/feedprojects' %>
       </div>
     </div>  
@@ -48,6 +53,7 @@
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%=    %>
 </div>
 
 <%= link_to image_tag("Ruby.svg", id: "img2", alt: "Ruby on Rails"),
