--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
         <li><%= link_to 'Hello', hello_path, class: "btn btn-lg btn-primary" %> </li>
+        <li><%= link_to 'Hello2', hello2_path, class: "btn btn-lg btn-saccess" %> </li>
         <!--link_to для создания ссылок (которые мы создавали непосредственно с якорным (анкорным) тегом a
           <li><%= link_to "Log in", login_path %></li> <!--login_path нету логина вооще авторизации-->
         <!-- 
