--- a/app/views/shared/_feedprojects.html.erb
+++ b/app/views/shared/_feedprojects.html.erb
@@ -1,6 +1,5 @@
 <% if @feed_itemsprojects.any? %>
-  <ol class="projects">
+  <ol class="projectsN">
     <%= render @feed_itemsprojects %>
   </ol>
-  
 <% end %>
