--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 В качестве первого шага к появлению ссылок и стилей в учебном приложении, мы добавим в файл макета сайта application.html.erb 
 -->
 <!DOCTYPE html>
-<html>
+<html><!--link to cssfile-->
   <title><%= full_title(yield(:title)) %></title>
     <%= stylesheet_link_tag 'application', media: 'all',
                                            'data-turbolinks-track' => true %>
@@ -29,6 +29,7 @@
       -->
     </div>
   </body>
+  <script type="text/javascript">/*alert('2')*/</script>  
 </html>
 <!--
       1. Профили в этом разделе будут первыми по-настоящему динамическими страницами в нашем приложении. Хотя представление будет существовать в виде отдельной страницы кода, в каждом профиле будет использована его собственная информация, полученная из базы данных приложения.
