--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= render 'layouts/shim' %>
     <%= render 'layouts/header' %>
   <body>
+    <h1 id="hello">Hello</h1>
     <div class="container">
 
             <% flash.each do |message_type, message| %>
