--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,6 @@
 <% provide(:title, "Home") %>
 
-<% if logged_in? %>
-  <ul class="example">
-      <li>Игрок 1 <a href="javascript: return false;" class="remove-button right">Удалить</a></li>
-      <li>Игрок 2 <a href="javascript: return false;" class="remove-button right">Удалить</a></li>
-      <li>Игрок 3 <a href="javascript: return false;" class="remove-button right">Удалить</a></li>
-      <li>Игрок 4 <a href="javascript: return false;" class="remove-button right">Удалить</a></li>
-    </ul>
-    <a href="javascript: return false;" class="create-button">добавить</a>
+<% if logged_in? %>    
   <div class="row">
     <aside class="col-md-4">
       <section class="user_info">
@@ -22,37 +15,58 @@
       <section >
       </section>  
     </aside>
-    <!--home-->
+    
     <div class="col-md-8">
+    <%= link_to "Profile", current_user, class: "btn btn-sm btn-xs btn-defalut" %>
+    </div>  
+    <div class="col-md-8">
+      <!-- render @projects -->
+
+
+
+      <%= render 'shared/feedprojects' %>
+
+
+
+      <!-- render @projects -->
       <h3>Micropost feed(lenta)</h3>
+
       <%= render 'shared/feed' %>    
-    </div>    
+
+    </div>
+
   </div>
-<% else %>
 
-<div class="center jumbotron">
-
-  <h2>
-    <img alt="Rails logo" src="/assets/Ruby.svg" id="img3" />
-    This is the home page for the
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-    <link ref="stylesheet" href=""><!--link to cssfile-->
-    <style>
-      h2{
-        color:red;
-      }
-    </style>  
-  </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-  <%=    %>
-</div>
-
-<%= link_to image_tag("Ruby.svg", id: "img2", alt: "Ruby on Rails"),
-            'http://rubyonrails.org/', id: "img2" %>
-<%= link_to 'User', users_path, class: "btn btn-lg btn-primary" %> |
-<%= link_to 'about', about_path, class: "btn btn-lg btn-primary" %> |
-<%= link_to 'help', help_path, class: "btn btn-lg btn-primary" %> |
-<%= link_to 'contact', contact_path, class: "btn btn-lg btn-primary" %>
+<% else %>  
+  <div class="center jumbotron">
+    <h2>
+      <img alt="Rails logo" src="/assets/Ruby.svg" id="img3" />
+      This is the home page for the
+      <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+      sample application.
+      <link ref="stylesheet" href=""><!--link to cssfile-->
+      <style>
+        h2{
+          color:red;
+        }
+      </style>  
+    </h2>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    <%=    %>
+  </div>
+  <%= link_to image_tag("Ruby.svg", id: "img2", alt: "Ruby on Rails"),
+              'http://rubyonrails.org/', id: "img2" %>
+  <%= link_to 'User', users_path, class: "btn btn-lg btn-primary" %> |
+  <%= link_to 'about', about_path, class: "btn btn-lg btn-primary" %> |
+  <%= link_to 'help', help_path, class: "btn btn-lg btn-primary" %> |
+  <%= link_to 'contact', contact_path, class: "btn btn-lg btn-primary" %>
 <% end %>
+<!--
+<ul class="example">
+      <li>Игрок 1 <a href="javascript: return false;" class="remove-button right">Удалить</a></li>
+      <li>Игрок 2 <a href="javascript: return false;" class="remove-button right">Удалить</a></li>
+      <li>Игрок 3 <a href="javascript: return false;" class="remove-button right">Удалить</a></li>
+      <li>Игрок 4 <a href="javascript: return false;" class="remove-button right">Удалить</a></li>
+    </ul>
+<a href="javascript: return false;" class="create-button">добавить</a>
+  -->
