--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,24 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>    
-    <!-- , object: f.object
+    
+      <%= f.label :name %><br>
+      <%= f.text_field(:name, {:class => 'form-control'})%>
+
+      <%= f.label :email %><br>
+      <%= f.text_field :email, class: 'form-control'%>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control'%>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field(:password_confirmation, {:class => 'form-control'})%>
+
+      <%= f.submit("Create my account", {:class => 'btn btn-success'})%>
+    <% end %>
+  </div>
+</div>
+<!-- , object: f.object
     #Частичные шаблоны (партиалы)
 сообщений об ошибках, связанных с объектом @user. Для их отображения в браузере мы будем показывать партиал error_messages, добавив CSS-класс form-control (у него есть специальное значение в Bootstrap) к каждому полю записи      
 =end
@@ -18,22 +35,6 @@ Extracted source (around line #15):
     end
 -->      
       <%# end %>
-      <%= f.label :name %><br>
-      <%= f.text_field :name, class: 'form-control'%>
-
-      <%= f.label :email %><br>
-      <%= f.text_field :email, class: 'form-control'%>
-
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control'%>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control'%>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
-  </div>
-</div>
 <!--/*Сначала посмотрим на внешнюю структуру, которая состоит из встроенного Ruby, она открывается вызовом form_for и закрывается end:
 Наличие ключевого слова do указывает на то, что form_for принимает блок с одной переменной, которую мы назвали f (от “form”).
 
