--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,9 @@
 <% if logged_in? %>    
   <div class="row">
     <aside class="col-md-4">
+      <section>
+
+      </section>  
       <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
@@ -21,16 +24,8 @@
     </div>  
     <div class="col-md-8">
       <!-- render @projects -->
-
-
-
       <%= render 'shared/feedprojects' %>
-
-
-
-      <!-- render @projects -->
       <h3>Micropost feed(lenta)</h3>
-
       <%= render 'shared/feed' %>    
 
     </div>
